--- a/public/app.html
+++ b/public/app.html
@@ -13,8 +13,9 @@
 
 <body>
   <div class="container">
-    <div class="row mt-4">
-      <div class="col-md-4">
+    
+    <div class="row">
+      <div class="col-sm-3">
         <div class="form-group">
           <select class="custom-select" id="category">
             <option selected value="">All Categories</option>
@@ -23,12 +24,23 @@
             <option value="Incoherent">Incoherent</option>
             <option value="Worse">Worse</option>
           </select>
-        </div>
-      </div>
-      <div class="col-md-2">
-        <a class="btn btn-light" href="/cms">New Entry</a>
+   
+      <div class="row">
+      <div class="col-sm-3">
+        <a class="btn-outline-success" href="/cms">New Entry</a>
+        <button a class="btn-outline-success" onClick="window.location='cms.html';" value="click here"> Home </button>
+
+        <div class="row"> <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
       </div>
     </div>
+  </div>
+  </div>
+  </div>
+  </div>
+</div>
     <div class="row">
       <div class="col-md-12 blog-container">
       </div>
